# surfaces-agent

./: .env.example  .gitignore  LICENSE  README.md  example.sh  pyproject.toml
surfaces_agent/: cli.py  tools.py
surfaces_agent/agent/: engine.py  registry.py  session.py  state.py
surfaces_agent/llm/: client.py
surfaces_agent/tools/: adsorption.py  analysis.py  io.py  md.py  mp.py  neb.py  pourbaix.py  search.py  slab.py  supercell.py  vacancy.py
