[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "surfaces-agent"
version = "0.2.0"
description = "Agentic AI assistant for surface chemistry, generating slabs, and running MLIAP relaxations."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain",
    "langchain-openai",
    "langchain-google-genai",
    "pymatgen",
    "chgnet",
    "torch",
    "mp-api"
]

[project.scripts]
surfaces-agent = "surfaces_agent.cli:main"